--------------------------------------------
Change log 05-June-2008
--------------------------------------------
- Supports Horde3D SDK [1.0.0Beta]

--------------------------------------------
Change log 04-December-2007
--------------------------------------------

Bugfixes:
- As a result of multithreading instability all samples are now single-threaded, using the application event handler Idle.
- Identified and removed the FPS-Bug. After resetting the stopwatch the time interval measurement has to be startet again.
- Workaround implemented into sample source, because Horde3D crashes in case resize() is called before init().

Remarks:
If you would like to disable the mouse tracking don't forget to call Invalidate() to redraw the scene

--------------------------------------------
Change log 30-November-2007
--------------------------------------------

New features:
- Supports Horde3D SDK [0.13.0] with support for HDR textures and ray collision queries
- Added and tested new Horde3D functions
- C# samples are up-to-date

Changes:
- Removed obsolete Horde3D functionality
- Removed VB.NET samples due to dubious inner exceptions

Known issues:
- Horde3D is not thread safe. So multithreading will cause instability.
- The clear()-method is not stable
- The sample source-code has to be revised
- Casting int to uint is no long term solution
- FPS calculation might be wrong yet still
- Security permission levels have to be analyzed
- Horde3D.NET does not support 64bit

--------------------------------------------
Change log 30-November-2007
--------------------------------------------

New features:
- Supports Horde3D SDK [0.12.0] with Parallel Split shadow mapping
- Added and tested new Horde3D functions
- C# and VB.NET samples are up-to-date

Changes:
- Removed obsolete Horde3D functionality

Fixed bugs:
- Changed target platform to x86 in order to prevent incompatibility on Windows (XP/Vista) 64 Bit systems

Known issues: