@@ -1,4 +1,9 @@
 --------------------------------------------
+Change log 16-march-2009
+--------------------------------------------
+- Supports Horde3D SDK [1.0.0Beta3]
+
+--------------------------------------------
 Change log 05-June-2008
 --------------------------------------------
 - Supports Horde3D SDK [1.0.0Beta]
